// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField 分子组件 > 快照测试 > 基础字段快照 1`] = `
<div
  class="space-y-1"
>
  <label
    class="block text-sm font-medium text-gray-700 mb-1"
    for="email"
  >
    邮箱
  </label>
  <input
    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder:text-gray-400 disabled:bg-gray-100 disabled:cursor-not-allowed"
    id="email"
    name="email"
  />
</div>
`;

exports[`InputField 分子组件 > 快照测试 > 带辅助文本的字段快照 1`] = `
<div
  class="space-y-1"
>
  <label
    class="block text-sm font-medium text-gray-700 mb-1"
    for="email"
  >
    邮箱
  </label>
  <input
    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder:text-gray-400 disabled:bg-gray-100 disabled:cursor-not-allowed"
    id="email"
    name="email"
  />
  <p
    class="text-sm text-gray-500"
  >
    使用有效的邮箱地址
  </p>
</div>
`;

exports[`InputField 分子组件 > 快照测试 > 必需字段快照 1`] = `
<div
  class="space-y-1"
>
  <label
    class="block text-sm font-medium text-gray-700 mb-1"
    for="email"
  >
    邮箱
    <span
      class="text-error"
    >
      *
    </span>
  </label>
  <input
    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder:text-gray-400 disabled:bg-gray-100 disabled:cursor-not-allowed"
    id="email"
    name="email"
  />
</div>
`;
